# Miniistagram

./: CMakeLists.txt  Data_structure.sln  Notifications.h  bst.h  friendLish.h  friendList.cpp  friendList.h  friendrequest.cpp  friendrequest.h  insta.cpp  insta.h  main.cpp  messages.cpp  messages.h  messagestack.h  newsfeed.h  post.cpp  post.h  requestList.cpp  requestList.h  user.cpp  user.h  validations.cpp  validations.h
.github/workflows/: c-cpp.yml
Data_structure/: Account.h  Data_structure.vcxproj  Data_structure.vcxproj.filters  Forget.h  login.h  main.cpp  signup.h  signup.txt
